--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
 #MySQL Configuration
-spring.datasource.url=
-spring.datasource.username=
+server.port:8080
+server.servlet.context-path=/codejava
+spring.datasource.url=jdbc:mysql://localhost:3306/administratormanager
+spring.datasource.username=root
 spring.datasource.password=
-
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.jdbc.lab_non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
